--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 	<div id="background">
 		<div id="header">
-   		 	<h1>This is my Computer Science Principles website!</h1>
+   		 	<h1>Eric Lu's Computer Science Principles website!</h1>
 		</div>
 		<div id="mainpart">
 			<div id= "sidebar">
